--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,121 @@
-@import 'core/variables';
-@import 'core/reset';
-@import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
+@import "core/variables";
+@import "core/reset";
+@import "layout/page";
+@import "layout/header";
+@import "layout/footer";
+
+:root {
+	font-family: $font-main;
+}
+body {
+	background-color: white;
+	margin: 0;
+	padding: 0;
+}
+.headerbox{
+    width: 100vw;
+    height: 420px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("../images/backimage.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+.title {
+	color: rgb(186, 122, 3);
+	font-size: medium;
+	text-align: center;
+    margin-bottom: 30px;
+}
+.searchbox {
+    position: absolute; 
+    top:400px;
+    z-index: 100;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+	margin: 0px 30px 30px 30px;
+	height: 40px;
+	background-color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+	padding: 20px;
+}
+.inputSearch {
+	width: 85vw;
+	border: solid 1px rgb(221, 189, 131);
+}
+.btn {
+	padding: 5px 10px 5px 10px;
+	color: white;
+	background-color: rgb(221, 189, 131);
+	display: inline-block;
+	border: 0;
+	border-radius: 10px;
+}
+.bigbox {
+    margin-top: 80px;
+	display: flex;
+    justify-content: space-around;
+}
+.list {
+	list-style: none;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+
+	gap: 30px;
+}
+.listfav {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
+.card {
+	padding: 20px;
+	background-color: white;
+	border-radius: 5px;
+	width: 190px;
+	height: 320px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.selected {
+	background-color: rgb(221, 189, 131);
+}
+.photobox {
+	overflow: hidden;
+	height: 220px;
+	width: 150px;
+	align-self: center;
+}
+.card_name {
+	font-size: 14px;
+	font-weight: 600;
+	text-align: center;
+}
+.card_status {
+	font-size: 12px;
+	font-weight: 300;
+	text-align: center;
+}
+.favoritesList {
+	height: 300px;
+}
+
+.card_img {
+	align-self: center;
+	height: 100%;
+}
+.charactesrList {
+	height: 300px;
+}
