--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
 	font-family: $font-main;
 }
 body {
-	background-color: white;
+	background-color: rgb(255, 210, 156);
 	margin: 0;
 	padding: 0;
 }
@@ -27,12 +27,19 @@ body {
 
 
 .title {
-	color: rgb(186, 122, 3);
-	font-size: medium;
-	text-align: center;
-    margin-bottom: 30px;
-}
+
+		text-transform: uppercase;
+		color:white;
+		font-size: medium;
+		text-align: center;
+		margin-bottom: 30px;
+		background-color:#ad4601;
+	
+	}
+
+
 .searchbox {
+	border-radius: 5px;
     position: absolute; 
     top:400px;
     z-index: 100;
@@ -48,33 +55,58 @@ body {
 }
 .inputSearch {
 	width: 85vw;
-	border: solid 1px rgb(221, 189, 131);
+	border: solid 1px #ad4601;
 }
-.btn {
+.searchbtn {
 	padding: 5px 10px 5px 10px;
 	color: white;
-	background-color: rgb(221, 189, 131);
+	background-color:#ad4601;
 	display: inline-block;
 	border: 0;
 	border-radius: 10px;
 }
-.bigbox {
-    margin-top: 80px;
+.superbigbox{
 	display: flex;
-    justify-content: space-around;
+	flex-direction: row;
+	gap: 70px 100px;
+	margin-top:  90px;
+	justify-content:center;
+
+
 }
 .list {
 	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-
 	gap: 30px;
+
+
 }
-.listfav {
-	list-style: none;
+.resetbutton{
+	transform: translateY(45px);
+	height: 60px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	&__btn{
+		text-transform: uppercase;
+		
+		font-size:medium;
+		padding: 10px 10px 10px 10px;
+	color: white;
+	font-weight: 700;
+
+	background-color:#ad4601;
+	display: inline-block;
+	border: 0;
+	border-radius: 10px;
+	}	
+}
+.listfav {
+	width: 420px;
+	list-style: none;
+	grid-template-columns: 1fr 1fr;
+	display: grid;
 	gap: 30px;
 }
 .card {
@@ -90,10 +122,12 @@ body {
 }
 
 .selected {
-	background-color: rgb(221, 189, 131);
+	background-color: #f8b425;
 }
 .photobox {
+	border-radius: 5px;
 	overflow: hidden;
+	object-fit: cover;
 	height: 220px;
 	width: 150px;
 	align-self: center;
@@ -118,4 +152,7 @@ body {
 }
 .charactesrList {
 	height: 300px;
+}
+.collapsed{
+	display: none;
 }
