--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -26,7 +26,9 @@ body {
 body {
   background-color: #ffd29c;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  display: flex;
+  flex-direction: column; }
 
 .headerbox {
   width: 100vw;
@@ -48,23 +50,41 @@ body {
   margin-bottom: 30px;
   background-color: #ad4601; }
 
-.searchbox {
-  border-radius: 5px;
+.xfavorite {
+  color: white;
+  font-weight: 600;
+  font-size: small;
   position: absolute;
-  top: 400px;
+  margin-top: -16px;
+  margin-left: 155px; }
+
+.searchbox {
+  transform: translateY(-30px);
+  align-self: center;
+  border-radius: 5px;
+  width: 800px;
+  top: 390px;
   z-index: 100;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   margin: 0px 30px 30px 30px;
-  height: 40px;
+  height: 60px;
   background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 50px;
   padding: 20px; }
 
+.fieldset {
+  border: transparent; }
+
+.searchmessage {
+  position: absolute;
+  font-size: 12px;
+  color: red; }
+
 .inputSearch {
-  width: 85vw;
+  width: 400px;
   border: solid 1px #ad4601; }
 
 .searchbtn {
@@ -86,10 +106,11 @@ body {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 30px; }
+  gap: 30px;
+  width: 1100px; }
 
 .resetbutton {
-  transform: translateY(45px);
+  transform: translateY(20px);
   height: 60px;
   display: flex;
   justify-content: center;
@@ -114,7 +135,7 @@ body {
 
 .card {
   padding: 20px;
-  background-color: white;
+  background-color: #f5eeda;
   border-radius: 5px;
   width: 190px;
   height: 320px;
