--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,3 +1,19 @@
 <main class="page__main">
+    <div class="superbigbox">
 
+        <div class="superbigbox__fav">
+            <section class="data js-data">
+                <h2 class="title titlefav">Favorites ❤︎</h2>
+                <ul class="listfav js-favorite-list">
+            </section>
+        </div>
+        <div class="superbigbox__ch">
+            <section class="data js-data">
+                <h1 class="title titlech">Characters</h1>
+                <ul class="list js_character_list">
+                </ul>
+            </section>
+        </div>
+
+    </div>
 </main>
