--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -57,7 +57,7 @@ body {
   background-color: #ad4601; }
 
 .xfavorite {
-  color: white;
+  color: #ad4601;
   font-weight: 600;
   font-size: small;
   position: absolute;
@@ -156,6 +156,9 @@ body {
 
 .selected {
   background-color: #f8b425; }
+
+.selectedfav {
+  background-color: #f3c869; }
 
 .photobox {
   border-radius: 5px;
