--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,15 +1,14 @@
 <main class="page__main">
     <div class="superbigbox">
-
-        <div class="superbigbox__fav">
+        <div>
             <section class="data js-data">
-                <h2 class="title titlefav">Favorites ❤︎</h2>
-                <ul class="listfav js-favorite-list">
+                <h2 class="superbigbox__title titlefav">Favorites ❤︎</h2>
+                <ul class="list__fav js-favorite-list">
             </section>
         </div>
-        <div class="superbigbox__ch">
+        <div>
             <section class="data js-data">
-                <h1 class="title titlech">Characters</h1>
+                <h1 class="superbigbox__title titlech">Characters</h1>
                 <ul class="list js_character_list">
                 </ul>
             </section>
