--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,4 +2,10 @@
 $font-main: 'Montserrat', sans-serif;
 
 // colors
+$color-footer : #e9b200;
+$color-secondary :#ad4601;
+$color-card-background: rgb(245, 238, 218);
+$color-selected-card:#a98204;
+$color-favorite-card:#dac737;
+$color-background-page:#fee1a2;
 
