--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
   position: fixed;
-  left: 0;
   bottom: 0;
   width: 100vw;
   height: 30px;
@@ -10,5 +9,5 @@
   justify-content: center;
   color: wheat;
   text-align: center;
-  background-color:  #e9b200;
+  background-color: $color-footer;
 }
