--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,7 @@
-.page__header {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+
+.headerbox{
+  height: 420px;
+  background-image: url("../images/backimage.jpeg");
+  background-position: center;
+  background-size: cover;
 }
