--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -1,5 +1,5 @@
 <div class="formbox">
-    <form class="searchbox js_form">
+    <form class="formbox__searchbox js_form">
         <fieldset class="fieldset">
             <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ej: Walter White">
             <select name="status" id="status" class="js_status statusselect">
