--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,10 @@
+
 body {
   padding: 2rem;
   height: 100vh;
-
- 
-
+	background-color: $color-background-page;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
 }
