--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,10 +2,10 @@
 $font-main: 'Montserrat', sans-serif;
 
 // colors
-$color-footer : #e9b200;
-$color-secondary :#ad4601;
-$color-card-background: rgb(245, 238, 218);
-$color-selected-card:#a98204;
+$color-footer : #419539;
+$color-secondary :#003a12;
+$color-card-background: #d3e7d1;
+$color-selected-card:#1d3a2a;
 $color-favorite-card:#dac737;
-$color-background-page:#fee1a2;
+$color-background-page:#b4e5af;
 
