--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 
 .headerbox{
   height: 420px;
-  background-image: url("../images/backimage.jpeg");
+  background-image: url("../images/backimage.jpg");
   background-position: center;
   background-size: cover;
 }
