--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -1,7 +1,7 @@
 <div class="formbox">
     <form class="formbox__searchbox js_form">
         <fieldset class="fieldset">
-            <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ej: Walter White">
+            <input class="inputSearch js_search" type="text" name="search" id="search" placeholder=" Ex: Walter White">
             <select name="status" id="status" class="js_status statusselect">
                 <option value="All">All</option>
                 <option value="Alive">Alive</option>
