--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: wheat;
+  color: rgb(255, 255, 255);
   text-align: center;
   background-color: $color-footer;
 }
