--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,9 +3,9 @@ $font-main: 'Montserrat', sans-serif;
 
 // colors
 $color-footer : #419539;
-$color-secondary :#003a12;
+$color-secondary :#336c2a;
 $color-card-background: #d3e7d1;
-$color-selected-card:#1d3a2a;
+$color-selected-card:#248d55;
 $color-favorite-card:#dac737;
-$color-background-page:#b4e5af;
+$color-background-page:#1c2d1b;
 
