--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -168,7 +168,7 @@ body {
 
 .selectedfav {
   background-color: #bcda37;
-  color: white; }
+  color: black; }
 
 :root {
   font-family: "Montserrat", sans-serif; }
