add evaluation exs

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,4 +1,5 @@
 <main class="page__main">
+    <p class="js_search_result"></p>
     <div class="superbigbox">
         <div>
             <section class="data js-data">
