--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -47,7 +47,7 @@ body {
 .superbigbox {
   display: flex;
   flex-direction: row;
-  gap: 70px 100px;
+  gap: 30px 10px;
   justify-content: center;
   margin-bottom: 100px; }
   .superbigbox__title {
@@ -57,42 +57,65 @@ body {
     text-align: center;
     margin-bottom: 30px;
     background-color: #336c2a; }
+  @media screen and (min-width: 768px) {
+    .superbigbox {
+      gap: 70px 100px; } }
 
 .list {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 30px;
-  width: 1100px; }
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 200px; }
+  @media screen and (min-width: 768px) {
+    .list {
+      grid-template-columns: repeat(5, 1fr);
+      width: 1100px;
+      gap: 30px; } }
   .list__fav {
-    width: 420px;
+    width: 220px;
     list-style: none;
     grid-template-columns: 1fr 1fr;
     display: grid;
-    gap: 30px; }
+    gap: 20px; }
+    @media screen and (min-width: 768px) {
+      .list__fav {
+        width: 420px;
+        gap: 30px; } }
 
 .card {
   padding: 20px;
   background-color: #d3e7d1;
   border-radius: 5px;
-  width: 190px;
-  height: 320px;
+  width: 90px;
+  height: 170px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); }
+  @media screen and (min-width: 768px) {
+    .card {
+      width: 190px;
+      height: 320px; } }
   .card__photobox {
     border-radius: 5px;
     overflow: hidden;
     -o-object-fit: cover;
     object-fit: cover;
-    height: 220px;
-    width: 150px;
+    height: 140px;
+    width: 50px;
     align-self: center; }
+    @media screen and (min-width: 768px) {
+      .card__photobox {
+        height: 220px;
+        width: 150px; } }
   .card__name {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
     text-align: center; }
+    @media screen and (min-width: 768px) {
+      .card__name {
+        font-size: 14px; } }
   .card__status {
     font-size: 12px;
     font-weight: 300;
@@ -113,6 +136,11 @@ body {
   color: white;
   text-align: center;
   background-color: #419539; }
+  .footer span {
+    display: none; }
+    @media screen and (min-width: 768px) {
+      .footer span {
+        display: inline; } }
 
 .xfavorite {
   color: white;
