--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="page__footer">
-    <p class="footer">Breaking Bad is regarded as one of the greates television series of all time, and with 16
-        Primetime Emmy Awards
-        &copy Marta Castrillo 2022</p>
+    <p class="footer"><span>Breaking Bad is regarded as one of the greates television series of all time, and with 16
+            Primetime Emmy Awards </span>
+        &copy Marta Castrillo 2023</p>
 </footer>
