--- a/src/scss/layout/_characterCards.scss
+++ b/src/scss/layout/_characterCards.scss
@@ -1,7 +1,7 @@
 .superbigbox {
 	display: flex;
 	flex-direction: row;
-	gap: 70px 100px;
+	gap: 30px 10px;
 	justify-content: center;
 	margin-bottom: 100px;
 
@@ -13,21 +13,33 @@
 		margin-bottom: 30px;
 		background-color: $color-secondary;
 	}
+	@media screen and (min-width: 768px) {
+		gap: 70px 100px;
+	}
 }
 
 .list {
 	list-style: none;
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	gap: 30px;
-	width: 1100px;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
+	width: 200px;
+	@media screen and (min-width: 768px) {
+		grid-template-columns: repeat(5, 1fr);
+		width: 1100px;
+		gap: 30px;
+	}
 
 	&__fav {
-		width: 420px;
+		width: 220px;
 		list-style: none;
 		grid-template-columns: 1fr 1fr;
 		display: grid;
-		gap: 30px;
+		gap: 20px;
+		@media screen and (min-width: 768px) {
+			width: 420px;
+			gap: 30px;
+		}
 	}
 }
 
@@ -35,26 +47,37 @@
 	padding: 20px;
 	background-color: $color-card-background;
 	border-radius: 5px;
-	width: 190px;
-	height: 320px;
+	width: 90px;
+	height: 170px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+	@media screen and (min-width: 768px) {
+		width: 190px;
+		height: 320px;
+	}
 
 	&__photobox {
 		border-radius: 5px;
 		overflow: hidden;
 		object-fit: cover;
-		height: 220px;
-		width: 150px;
+		height: 140px;
+		width: 50px;
 		align-self: center;
+		@media screen and (min-width: 768px) {
+			height: 220px;
+		width: 150px;
+		}
 	}
 
 	&__name {
-		font-size: 14px;
+		font-size: 12px;
 		font-weight: 600;
 		text-align: center;
+		@media screen and (min-width: 768px) {
+			font-size: 14px;
+		}
 	}
 
 	&__status {
