--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -2,16 +2,20 @@
 	transform: translateY(-30px);
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+	}
 
 	&__searchbox {
 		align-self: center;
 		border-radius: 5px;
-		width: 650px;
+		width:fit-content;
 		top: 390px;
 		z-index: 100;
 		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-		margin: 0px 30px 30px 30px;
-		height: 60px;
+		margin: 0px 30px 10px 30px;
+		height: fit-content;
 		background-color: white;
 		border: 2px solid $color-secondary;
 		display: flex;
@@ -19,14 +23,23 @@
 		justify-content: center;
 		align-items: center;
 		padding: 20px;
-
+		@media screen and (min-width: 768px) {
+			margin: 0px 30px 30px 30px;
+			flex-direction: column;
+			width: 650px;
+			height: 60px;
+		}
 		.fieldset {
 			border: transparent;
 		}
 
 		.inputSearch {
-			width: 400px;
+			width: 100;
 			border: solid 1px $color-secondary;
+			@media screen and (min-width: 768px) {
+				flex-direction: column;
+				width: 400px;
+			}
 		}
 	}
 }
