fix responsive design

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -55,7 +55,7 @@ body {
     .formbox__searchbox .fieldset {
       border: transparent; }
     .formbox__searchbox .inputSearch {
-      width: 100;
+      width: 120px;
       border: solid 1px #336c2a; }
       @media screen and (min-width: 768px) {
         .formbox__searchbox .inputSearch {
@@ -83,64 +83,79 @@ body {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  width: 200px; }
+  gap: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content; }
   @media screen and (min-width: 768px) {
     .list {
       grid-template-columns: repeat(5, 1fr);
       width: 1100px;
       gap: 30px; } }
   .list__fav {
-    width: 220px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
     list-style: none;
     grid-template-columns: 1fr 1fr;
     display: grid;
-    gap: 20px; }
+    gap: 10px; }
     @media screen and (min-width: 768px) {
       .list__fav {
         width: 420px;
         gap: 30px; } }
 
 .card {
-  padding: 20px;
+  padding: 5px;
   background-color: #d3e7d1;
   border-radius: 5px;
   width: 90px;
-  height: 170px;
+  height: 140px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); }
   @media screen and (min-width: 768px) {
     .card {
+      padding: 20px;
       width: 190px;
       height: 320px; } }
   .card__photobox {
-    border-radius: 5px;
     overflow: hidden;
     -o-object-fit: cover;
     object-fit: cover;
     height: 140px;
-    width: 50px;
+    width: 75px;
     align-self: center; }
     @media screen and (min-width: 768px) {
       .card__photobox {
         height: 220px;
-        width: 150px; } }
+        width: 150px;
+        border-radius: 5px; } }
   .card__name {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 600;
     text-align: center; }
     @media screen and (min-width: 768px) {
       .card__name {
-        font-size: 14px; } }
+        font-size: 14px;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content; } }
   .card__status {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 300;
     text-align: center; }
+    @media screen and (min-width: 768px) {
+      .card__status {
+        font-size: 12px;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content; } }
   .card__img {
     align-self: center;
-    height: 100%; }
+    height: 100px;
+    border-radius: 5px; }
 
 .footer {
   position: fixed;
@@ -165,8 +180,16 @@ body {
   font-weight: 600;
   font-size: small;
   position: absolute;
-  margin-top: -16px;
-  margin-left: 55px; }
+  margin-top: -120px;
+  margin-left: 65px;
+  background-color: #336c2a;
+  text-align: center;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px; }
+  @media screen and (min-width: 768px) {
+    .xfavorite {
+      display: inline; } }
 
 .resetbutton {
   height: 60px;
@@ -197,7 +220,12 @@ body {
   background-color: #336c2a;
   border: 0;
   border-radius: 10px;
-  margin-left: 13px; }
+  margin-left: 5px;
+  font-size: 10px; }
+  @media screen and (min-width: 768px) {
+    .searchbtn {
+      font-size: 14px;
+      margin-left: 13px; } }
   .searchbtn:hover {
     background-color: #419539;
     transform: scale(1.1, 1.1);
