--- a/src/scss/components/_interactivity.scss
+++ b/src/scss/components/_interactivity.scss
@@ -3,8 +3,16 @@
 	font-weight: 600;
 	font-size: small;
 	position: absolute;
-	margin-top: -16px;
-	margin-left: 55px;
+	margin-top: -120px;
+	margin-left: 65px;
+	background-color: $color-secondary;
+	text-align: center;
+	border-radius: 50%;
+	width: 15px;
+	height: 15px;
+	@media screen and (min-width: 768px) {
+		display: inline;
+		  }
 }
 
 .resetbutton {
@@ -43,8 +51,13 @@
 	background-color: $color-secondary;
 	border: 0;
 	border-radius: 10px;
-	margin-left: 13px;
+	margin-left: 5px;
+	font-size: 10px;
+	@media screen and (min-width: 768px) {
+	font-size: 14px;
 
+	margin-left: 13px;
+	}
 	&:hover {
 		background-color: $color-footer;
 		transform: scale(1.1, 1.1);
