--- a/src/scss/layout/_characterCards.scss
+++ b/src/scss/layout/_characterCards.scss
@@ -56,6 +56,7 @@
 	justify-content: center;
 	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 	@media screen and (min-width: 768px) {
+		gap: 20px;
 		padding: 20px;
 		width: 190px;
 		height: 320px;
@@ -71,8 +72,8 @@
 		
 		@media screen and (min-width: 768px) {
 			height: 220px;
-		width: 150px;
-		border-radius: 5px;
+			width: 150px;
+			border-radius: 5px;
 		}
 	}
 
@@ -103,5 +104,8 @@
 		align-self: center;
 		height: 100px;
 		border-radius: 5px;
+		@media screen and (min-width: 768px) {
+			height: 100%;
+		}
 	}
 }
