--- a/src/scss/layout/_characterCards.scss
+++ b/src/scss/layout/_characterCards.scss
@@ -13,12 +13,19 @@
 		text-align: center;
 		margin-bottom: 30px;
 		background-color: $color-secondary;
+		
 	}
 	@media screen and (min-width: 768px) {
 		gap: 70px 100px;
 	}
 }
-
+.titlefav{
+	
+	width: 190px;	
+	@media screen and (min-width: 768px) {
+		width: 420px;	
+	}
+}
 .list {
 	list-style: none;
 	display: grid;
