--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,10 @@
 
 .headerbox{
-  height: 420px;
+  height: 320px;
   background-image: url("../images/backimage.jpg");
   background-position: center;
   background-size: cover;
+  @media screen and (min-width: 768px) {
+    height: 420px;
+  }
 }
